[#4] canvas 위치 조정, 리셋  버튼 완료

--- a/src/styles/Draw.module.css
+++ b/src/styles/Draw.module.css
@@ -65,8 +65,11 @@ button {
   font-size: 14px;
 }
 
-/* FOOTER */
-footer {
-  font-size: 12px;
-  text-align: center;
+.clearDrawing {
+  font-size: 16px;
+  color: white;
+  background-color: rgb(255, 23, 76);
+  border: none;
+  border-radius: 2px;
+  padding: 5px;
 }
