--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -4,8 +4,7 @@ html {
   }
   * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin-top: 0;
   }
   a {
     text-decoration: none;
@@ -43,7 +42,7 @@ html {
   /* UPLOAD */
   .main_service {
     width: 100%;
-    height: 55vh;
+    height: 52vh;
     display: flex;
     justify-content: center;
     background-color: rgb(242, 242, 242);
@@ -57,6 +56,7 @@ html {
   }
   
   .main_service .title {
+    font: bold;
     font-size: 20px;
     padding-top: 0;
     padding-bottom: 0;
@@ -120,7 +120,7 @@ html {
   .howTo {
     width: 100%;
     height: 35vh;
-    display: flex;
+    display: flex; 
     justify-content: center;
   }
   .howTo_title {
@@ -130,10 +130,9 @@ html {
   }
   
   .howTo_description {
-    font-size: 20px;
+    font-size: 17px;
     line-height: 2;
   }
-  
   /* RECOMENDED SONG */
   .main_content1 {
     width: 100%;
@@ -225,6 +224,7 @@ html {
   /* FOOTER */
   footer {
     width: 100%;
+    margin-top: 20px;
     display: flex;
     justify-content: center;
     text-align: center;
