--- a/src/styles/PicAndVid.module.css
+++ b/src/styles/PicAndVid.module.css
@@ -5,7 +5,7 @@
   height: 8vh;
 }
 .picAndVid_logo {
-  height: 100%;
+  height: 100%; 
 }
 /* MAIN */
 .main {
@@ -31,7 +31,7 @@
 .upload_file {
   margin-top: 15px;
   width: 100%;
-  height: 60vh;
+  height: 68vh;
   border: 1px solid black;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  font-size: 20px;
+  font-size: 16px;
   justify-content: center;
 }
 .option .count {
@@ -54,24 +54,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
 }
-.option .time {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
+
 .option span {
   align-self: center;
 }
-.option button {
-  font-size: 18px;
-  margin: 0;
-  border: none;
-  align-self: center;
-  width: 130px;
-  background-color: rgb(242, 242, 242);
+
+.option .select{
+  width: 200px;
+  height: 25px;
+  text-align: center;
+  font-size: 16px;
+  
 }
 
 .submit {
